# pygeturl

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
pygeturl/: cli.py  common.py  registry.py
pyimporter/: cli.py  common.py  importer.py  registry.py
