[project]
name = "pygeturl"
version = "0.1.0"
description = "Import Python modules from remote URLs like Go or Bun"
authors = [{ name = "Fadhel Ijlal", email = "fadhelijlalfalah@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
pygeturl = "pygeturl.cli:main"
